--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>welcome to all students</h1>
+    <h1>welcome to all students today</h1>
 </body>
 </html>
 <style>
@@ -15,6 +15,6 @@
         font-family: 'Times New Roman', Times, serif;
     }
     body{
-        background-color: aqua;
+        background-color: pink;
     }
 </style>
